test_scores/negative_dimers/features/Q8TF46.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q8TF46.pkl.xz